--- a/miwi/media/system/css/base.css
+++ b/miwi/media/system/css/base.css
@@ -313,9 +313,9 @@ h3.pane-toggler a:hover {
     margin-top: 10px;
 }
 
-input#jformparams_link_titles1,
-input#jformparams_show_title1,
-input#jformparams_link_category1 {
+input#mformparams_link_titles1,
+input#mformparams_show_title1,
+input#mformparams_link_category1 {
     margin-left: 13px;
 }
 
