--- a/site/opencart/admin/view/stylesheet/stylesheet.css
+++ b/site/opencart/admin/view/stylesheet/stylesheet.css
@@ -279,27 +279,27 @@ body > #container_oc {
 	width: 100% !important;
 }
 .box > .heading {
-	height: 38px !important;
+	height: 42px !important;
 	padding-left: 7px !important;
 	padding-right: 7px !important;
 	border: 1px solid #DBDBDB !important;
-	background: url('../image/box.png') repeat-x !important;
-	-webkit-border-radius: 7px 7px 0px 0px !important;
-	-moz-border-radius: 7px 7px 0px 0px !important;
-	-khtml-border-radius: 7px 7px 0px 0px !important;
-	border-radius: 7px 7px 0px 0px !important;
+	background: #F5F5F5 !important;
+	-webkit-border-radius: 3px 3px 0px 0px !important;
+	-moz-border-radius: 3px 3px 0px 0px !important;
+	-khtml-border-radius: 3px 3px 0px 0px !important;
+	border-radius: 3px 3px 0px 0px !important;
 }
 .box > .heading h1 {
     color: #003A88 !important;
     float: left !important;
     font-size: 16px !important;
     margin: 0 !important;
-    padding: 11px 0 0 !important;
+    padding: 7px 0 0 !important;
     width: 45% !important;
 }
 .box > .heading h1 img {
 	float: left !important;
-	margin-top: -1px !important;
+	margin-top: 3px !important;
 	margin-left: 3px !important;
 	margin-right: 8px !important;
 }
@@ -328,16 +328,51 @@ body > #container_oc {
 	/*overflow: auto !important;*/
 }
 a.button_oc, .list a.button_oc_oc {
-	text-decoration: none !important;
-	color: #FFF !important;
-	display: inline-block !important;
-	padding: 5px 15px 5px 15px !important;
-	background: #003A88 !important;
-	-webkit-border-radius: 10px 10px 10px 10px !important;
-	-moz-border-radius: 10px 10px 10px 10px !important;
-	-khtml-border-radius: 10px 10px 10px 10px !important;
-	border-radius: 10px 10px 10px 10px !important;
+    display: inline-block;
+    padding: 6px 12px;
+    margin-bottom: 0;
+    font-size: 14px;
+    font-weight: normal;
+    line-height: 1;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    -o-user-select: none;
+    user-select: none;
+    background-image: none;
+    border: 1px solid transparent;
+    border-radius: 4px;
+    color: #fff;
+    background-color: #428bca;
+    border-color: #357ebd;
+    text-decoration: none !important;
 }
+
+a.button_oc:visited, .list a.button_oc_oc:visited {
+    text-decoration: none !important;
+    color: #fff;
+    background-color: #428bca;
+    border-color: #357ebd;
+}
+
+a.button_oc:link, .list a.button_oc_oc:link {
+    text-decoration: none !important;
+    color: #fff;
+    background-color: #428bca;
+    border-color: #357ebd;
+}
+
+a.button_oc:hover, .list a.button_oc_oc:hover {
+    text-decoration: none !important;
+    color: #fff !important;
+    background-color: #3276b1;
+    border-color: #285e8e;
+}
+
 .list {
 	border-collapse: collapse !important;
 	width: 100% !important;
@@ -358,9 +393,19 @@ a.button_oc, .list a.button_oc_oc {
 	color: #222222 !important;
 	font-weight: bold !important;
 }
+
+.filter a.button_oc{
+	text-decoration: none !important;
+}
+
 .list tbody td a {
 	text-decoration: underline !important;
 }
+
+.filter input, select, button, a{
+    margin-bottom: 0 !important;
+}
+
 .list tbody td {
 	vertical-align: middle !important;
 	padding: 0px 5px !important;
