--- a/site/opencart/admin/view/stylesheet/stylesheet.css
+++ b/site/opencart/admin/view/stylesheet/stylesheet.css
@@ -406,6 +406,10 @@ a.button_oc:hover, .list a.button_oc_oc:hover {
     margin-bottom: 0 !important;
 }
 
+.filter input, .filter select{
+    width: 95% !important;
+}
+
 .list tbody td {
 	vertical-align: middle !important;
 	padding: 0px 5px !important;
