--- a/site/opencart/catalog/view/theme/default/stylesheet/stylesheet.css
+++ b/site/opencart/catalog/view/theme/default/stylesheet/stylesheet.css
@@ -1786,7 +1786,7 @@ input[type=submit].btn-block,input[type=reset].btn-block,input[type=button].btn-
     outline: 0
 }
 
-.miwoshop .dropdown-menu {
+.miwoshop .dropdown-menu, .miwoshop.dropdown-menu {
     position: absolute;
     top: 100%;
     left: 0;
@@ -1806,18 +1806,18 @@ input[type=submit].btn-block,input[type=reset].btn-block,input[type=button].btn-
     background-clip: padding-box
 }
 
-.miwoshop .dropdown-menu.pull-right {
+.miwoshop .dropdown-menu.pull-right, .miwoshop.dropdown-menu.pull-right {
     right: 0;
     left: auto
 }
 
-.miwoshop .dropdown-menu .divider {
+.miwoshop .dropdown-menu .divider, .miwoshop.dropdown-menu .divider {
     height: 1px;
     margin: 9px 0;
     overflow: hidden;
 }
 
-.miwoshop .dropdown-menu>li>a {
+.miwoshop .dropdown-menu>li>a, .miwoshop.dropdown-menu>li>a {
     display: block;
     padding: 3px 20px;
     clear: both;
@@ -1827,16 +1827,16 @@ input[type=submit].btn-block,input[type=reset].btn-block,input[type=button].btn-
     text-transform: none;
 }
 
-.miwoshop .dropdown-menu>.disabled>a:hover,.miwoshop .dropdown-menu>.disabled>a:focus {
+.miwoshop .dropdown-menu>.disabled>a:hover,.miwoshop .dropdown-menu>.disabled>a:focus, .miwoshop.dropdown-menu>.disabled>a:hover, .miwoshop.dropdown-menu>.disabled>a:focus {
     text-decoration: none;
     cursor: not-allowed
 }
 
-.miwoshop .open>.dropdown-menu {
+.miwoshop .open>.dropdown-menu, .miwoshop.open>.dropdown-menu {
     display: block
 }
 
-.miwoshop .open>a {
+.miwoshop .open>a, .miwoshop.open>a {
     outline: 0
 }
 
